--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "watch": "npm-run-all --parallel \"watch:* -s\"",
         "build:js": "browserify src/assets/js/* -o dist/bundle.js",
         "watch:js": "watch 'npm run build:js' src/assets/js",
-        "build:css": "node-sass src/assets/css -o dist/",
+        "build:css": "node-sass src/assets/css -o dist/ --output-style compressed",
         "watch:css": "node-sass -w src/assets/css -o dist/",
         "build:html": "cp src/*.html dist/",
         "watch:html": "watch 'npm run build:html' src",
